--- a/index.html
+++ b/index.html
@@ -4,11 +4,55 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Primes</title>
-
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700">
-
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="css/common.css">
+  <link rel="stylesheet" type="text/css" href="css/elegant-fonts.css">
+  <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="css/grid-system.css">
+  <link rel="stylesheet" type="text/css" href="css/ionicons.min.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/utilities.css">
 </head>
-<body>
-</body>
+	<body>
+		<div class="container-fluid">
+			<section><!--abre section de botones de secciones-->
+				<div class="row p-center"><!--abre row 1 de 2 con tres divisiones-->
+					<div class="col-4 text-center">
+						<img src="img/icons/mapa.png" alt="mapita">
+						<h1 class="sbt1">Lorem Ipsum</h1>
+						<p class="sbt1 text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum error, dicta recusandae ipsa adipisci laborum quasi, voluptates ratione mollitia deserunt id sunt facere at aliquid in. Consequatur, porro ipsa expedita!</p>
+					</div>
+					<div class="col-4 text-center">
+						<img src="img/icons/avion.png" alt="mapita">
+						<h1 class="sbt1">Lorem Ipsum</h1>
+						<p class="sbt1 text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum error, dicta recusandae ipsa adipisci laborum quasi, voluptates ratione mollitia deserunt id sunt facere at aliquid in. Consequatur, porro ipsa expedita!</p>
+					</div>
+					<div class="col-4 text-center">
+						<img src="img/icons/lista.png" alt="mapita">
+						<h1 class="sbt1">Lorem Ipsum</h1>
+						<p class="sbt1 text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum error, dicta recusandae ipsa adipisci laborum quasi, voluptates ratione mollitia deserunt id sunt facere at aliquid in. Consequatur, porro ipsa expedita!</p>
+					</div>
+				</div><!--cierra row 1 de 2 con tres divisiones-->
+				<div class="row p-center"><!--abre row 2 de 2 con tres divisiones-->
+					<div class="col-4 text-center">
+						<img src="img/icons/tierra.png" alt="mapita">
+						<h1 class="sbt1">Lorem Ipsum</h1>
+						<p class="sbt1 text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum error, dicta recusandae ipsa adipisci laborum quasi, voluptates ratione mollitia deserunt id sunt facere at aliquid in. Consequatur, porro ipsa expedita!</p>
+					</div>
+					<div class="col-4 text-center">
+						<img src="img/icons/energia.png" alt="mapita">
+						<h1 class="sbt1">Lorem Ipsum</h1>
+						<p class="sbt1 text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum error, dicta recusandae ipsa adipisci laborum quasi, voluptates ratione mollitia deserunt id sunt facere at aliquid in. Consequatur, porro ipsa expedita!</p>
+					</div>
+					<div class="col-4 text-center">
+						<img src="img/icons/sonido.png" alt="mapita">
+						<h1 class="sbt1">Lorem Ipsum</h1>
+						<p class="sbt1 text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum error, dicta recusandae ipsa adipisci laborum quasi, voluptates ratione mollitia deserunt id sunt facere at aliquid in. Consequatur, porro ipsa expedita!</p>
+					</div>
+				</div><!--cierra row 2 de 2 con tres divisiones-->
+			</section>
+		</div>
+	</body>
 </html>
