fondo de more features

--- a/index.html
+++ b/index.html
@@ -53,6 +53,20 @@
 					</div>
 				</div><!--cierra row 2 de 2 con tres divisiones-->
 			</section>
+			<section> <!--imagen de laptop con fondo gris-->
+				<div class="row bg-gray pd-5 pt-g"><!--fondo gris-->
+					<div class="row text-center"><!--texto more features-->
+						<div class="col-12">
+							<p class="titulos sbt1">More Features</p>
+						</div>
+					</div><!-- termina texto more features-->
+					<div class="row text-center"><!--texto img lap-->
+						<div class="col-12">
+							<img src="img/laptop-features.png">
+						</div>
+					</div><!-- termina img lap-->
+				</div><!-- termina fondo gris-->
+			</section> <!-- cierra imagen de laptop con fondo gris-->
 		</div>
 	</body>
 </html>
