sección 2 de more features, aquí termina more features

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<body>
 		<div class="container-fluid">
 			<section><!--abre section de botones de secciones-->
-				<div class="row p-center"><!--abre row 1 de 2 con tres divisiones-->
+				<div class="row pd-5"><!--abre row 1 de 2 con tres divisiones-->
 					<div class="col-4 text-center">
 						<img src="img/icons/mapa.png" alt="mapita">
 						<h1 class="sbt1">Lorem Ipsum</h1>
@@ -35,7 +35,7 @@
 						<p class="sbt1 text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum error, dicta recusandae ipsa adipisci laborum quasi, voluptates ratione mollitia deserunt id sunt facere at aliquid in. Consequatur, porro ipsa expedita!</p>
 					</div>
 				</div><!--cierra row 1 de 2 con tres divisiones-->
-				<div class="row p-center"><!--abre row 2 de 2 con tres divisiones-->
+				<div class="row pd-5"><!--abre row 2 de 2 con tres divisiones-->
 					<div class="col-4 text-center">
 						<img src="img/icons/tierra.png" alt="mapita">
 						<h1 class="sbt1">Lorem Ipsum</h1>
@@ -57,7 +57,7 @@
 				<div class="row bg-gray pd-5 pt-g"><!--fondo gris-->
 					<div class="row text-center"><!--texto more features-->
 						<div class="col-12">
-							<p class="titulos sbt1">More Features</p>
+							<p class="titulos sbt1 text-gray">More Features</p>
 						</div>
 					</div><!-- termina texto more features-->
 					<div class="row text-center"><!--texto img lap-->
@@ -67,6 +67,84 @@
 					</div><!-- termina img lap-->
 				</div><!-- termina fondo gris-->
 			</section> <!-- cierra imagen de laptop con fondo gris-->
+			<section class="pt-5 pb-5"><!-- iconos con texto antes de portafolio--> 
+				<div class="row pd-3"><!--primera row que se divide en dos cols-->
+					<div class="col-6"><!--abre primera col 6 de 2-->
+						<div class="row"><!--abre row de primer cuadro con icono y texto-->
+							<div class="col-2"><!--abre col 2 de icono lateral-->
+								<img class="icons" src="img/icons/matraz.png">
+							</div>
+							<div class="col-10"><!--abre col 10 de texto lateral-->
+								<h1 class="sbt1">Lorem Ipsum</h1>
+								<p class="sbt1 text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum error, dicta recusandae ipsa adipisci laborum quasi, voluptates ratione mollitia deserunt id sunt facere at aliquid in. Consequatur, porro ipsa expedita!</p>
+							</div><!--cierra col 10 de texto lateral-->
+						</div><!--cierra row de primer cuadro con icono y texto-->
+					</div><!--cierra primera col 6 de 2-->
+					<div class="col-6"><!--abre segunda col 6 de 2-->
+						<div class="row"><!--abre row de primer cuadro con icono y texto-->
+							<div class="col-2"><!--abre col 2 de icono lateral-->
+								<img class="icons" src="img/icons/velocimetro.png">
+							</div>
+							<div class="col-10"><!--abre col 10 de texto lateral-->
+								<h1 class="sbt1">Lorem Ipsum</h1>
+								<p class="sbt1 text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum error, dicta recusandae ipsa adipisci laborum quasi, voluptates ratione mollitia deserunt id sunt facere at aliquid in. Consequatur, porro ipsa expedita!</p>
+							</div><!--cierra col 10 de texto lateral-->
+						</div><!--cierra row de primer cuadro con icono y texto-->
+					</div><!--cierra segunda col 6 de 2-->
+				</div><!--  cierra primera row que se divide en dos cols-->
+
+				<div class="row pd-3"><!--segunda row que se divide en dos cols-->
+					<div class="col-6"><!--abre primera col 6 de 2-->
+						<div class="row"><!--abre row de primer cuadro con icono y texto-->
+							<div class="col-2"><!--abre col 2 de icono lateral-->
+								<img class="icons" src="img/icons/barco.png">
+							</div>
+							<div class="col-10"><!--abre col 10 de texto lateral-->
+								<h1 class="sbt1">Lorem Ipsum</h1>
+								<p class="sbt1 text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum error, dicta recusandae ipsa adipisci laborum quasi, voluptates ratione mollitia deserunt id sunt facere at aliquid in. Consequatur, porro ipsa expedita!</p>
+							</div><!--cierra col 10 de texto lateral-->
+						</div><!--cierra row de primer cuadro con icono y texto-->
+					</div><!--cierra primera col 6 de 2-->
+					<div class="col-6"><!--abre segunda col 6 de 2-->
+						<div class="row"><!--abre row de primer cuadro con icono y texto-->
+							<div class="col-2"><!--abre col 2 de icono lateral-->
+								<img class="icons" src="img/icons/pie.png">
+							</div>
+							<div class="col-10"><!--abre col 10 de texto lateral-->
+								<h1 class="sbt1">Lorem Ipsum</h1>
+								<p class="sbt1 text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum error, dicta recusandae ipsa adipisci laborum quasi, voluptates ratione mollitia deserunt id sunt facere at aliquid in. Consequatur, porro ipsa expedita!</p>
+							</div><!--cierra col 10 de texto lateral-->
+						</div><!--cierra row de primer cuadro con icono y texto-->
+					</div><!--cierra segunda col 6 de 2-->
+				</div><!--  cierra segunda row que se divide en dos cols-->
+
+				<div class="row pd-3"><!--tercera row que se divide en dos cols-->
+					<div class="col-6"><!--abre primera col 6 de 2-->
+						<div class="row"><!--abre row de primer cuadro con icono y texto-->
+							<div class="col-2"><!--abre col 2 de icono lateral-->
+								<img class="icons" src="img/icons/descargar.png">
+							</div>
+							<div class="col-10"><!--abre col 10 de texto lateral-->
+								<h1 class="sbt1">Lorem Ipsum</h1>
+								<p class="sbt1 text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum error, dicta recusandae ipsa adipisci laborum quasi, voluptates ratione mollitia deserunt id sunt facere at aliquid in. Consequatur, porro ipsa expedita!</p>
+							</div><!--cierra col 10 de texto lateral-->
+						</div><!--cierra row de primer cuadro con icono y texto-->
+					</div><!--cierra primera col 6 de 2-->
+					<div class="col-6"><!--abre segunda col 6 de 2-->
+						<div class="row"><!--abre row de primer cuadro con icono y texto-->
+							<div class="col-2"><!--abre col 2 de icono lateral-->
+								<img class="icons" src="img/icons/copa.png">
+							</div>
+							<div class="col-10"><!--abre col 10 de texto lateral-->
+								<h1 class="sbt1">Lorem Ipsum</h1>
+								<p class="sbt1 text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum error, dicta recusandae ipsa adipisci laborum quasi, voluptates ratione mollitia deserunt id sunt facere at aliquid in. Consequatur, porro ipsa expedita!</p>
+							</div><!--cierra col 10 de texto lateral-->
+						</div><!--cierra row de primer cuadro con icono y texto-->
+					</div><!--cierra segunda col 6 de 2-->
+				</div><!--  cierra tercera row que se divide en dos cols-->
+
+
+			</section><!-- coerra iconos con texto antes de portafolio-->
 		</div>
 	</body>
 </html>
