section de portafolio terminada

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="css/utilities.css">
 </head>
 	<body>
-		<div class="container-fluid">
+		<div class="container-fluid mc">
 			<section><!--abre section de botones de secciones-->
 				<div class="row pd-5"><!--abre row 1 de 2 con tres divisiones-->
 					<div class="col-4 text-center">
@@ -92,7 +92,6 @@
 						</div><!--cierra row de primer cuadro con icono y texto-->
 					</div><!--cierra segunda col 6 de 2-->
 				</div><!--  cierra primera row que se divide en dos cols-->
-
 				<div class="row pd-3"><!--segunda row que se divide en dos cols-->
 					<div class="col-6"><!--abre primera col 6 de 2-->
 						<div class="row"><!--abre row de primer cuadro con icono y texto-->
@@ -117,7 +116,6 @@
 						</div><!--cierra row de primer cuadro con icono y texto-->
 					</div><!--cierra segunda col 6 de 2-->
 				</div><!--  cierra segunda row que se divide en dos cols-->
-
 				<div class="row pd-3"><!--tercera row que se divide en dos cols-->
 					<div class="col-6"><!--abre primera col 6 de 2-->
 						<div class="row"><!--abre row de primer cuadro con icono y texto-->
@@ -142,9 +140,110 @@
 						</div><!--cierra row de primer cuadro con icono y texto-->
 					</div><!--cierra segunda col 6 de 2-->
 				</div><!--  cierra tercera row que se divide en dos cols-->
-
-
 			</section><!-- coerra iconos con texto antes de portafolio-->
+			<section> <!--imagen de laptop con fondo gris-->
+				<div class="row bg-gray pd-5 pt-g"><!--fondo gris-->
+					<div class="row text-center"><!--texto more features-->
+						<div class="col-12">
+							<p class="titulos sbt1 text-gray">Portfolio</p>
+						</div>
+					</div><!-- termina texto more features-->
+					<div class="row text-center"><!--texto img lap-->
+						<div class="col-12">
+							<p class="sbt1 text-gray pd-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur velit fugit possimus, eum provident!</p>
+						</div>
+					</div><!-- termina img lap-->
+					<div class="row"><!--abre row de menu-->
+						<div class="col-12 text-center"><!--col 12 de menu-->
+							<ul class="sbt1">
+								<a class="boton" href=""><li>Show All</li></a>
+								<a class="boton" href=""><li>Identity</li></a>
+								<a class="boton" href=""><li>Web Design</li></a>
+								<a class="boton" href=""><li>Graphic</li></a>
+								<a class="boton" href=""><li>Logo</li></a>
+							</ul>
+						</div><!-- termina col 12 de menu-->
+					</div><!--termina row de menu-->
+					<div class="row pb-5 pt-5"><!--abre row 1 de 3 con dos cols-6-->
+						<div class="col-6 blanco text-center mr-5"><!--abre col-6 1 de 2 priemra fila-->
+							<div class="row"><!--row de imagen-->
+								<img class="mol" src="img/grid/1a.jpg">
+							</div>
+							<div class="row"><!--row de imagen-->
+								<h1 class="sbt1">Dashboard</h1>
+							</div>
+							<div class="row"><!--row de imagen-->
+								<p class="sbt1 text-gray"> Web Design / Graphic</p>
+							</div>
+						</div><!--cierra col-6 2 de 2 priemra fila-->
+						<div class="col-6 blanco text-center mr-5"><!--abre col-6 1 de 2 priemra fila-->
+							<div class="row"><!--row de imagen-->
+								<img class="mol" src="img/grid/2a.jpg">
+							</div>
+							<div class="row"><!--row de imagen-->
+								<h1 class="sbt1">Wordl Clock Widge</h1>
+							</div>
+							<div class="row"><!--row de imagen-->
+								<p class="sbt1 text-gray"> Logo / Web Design</p>
+							</div>
+						</div><!--cierra col-6 2 de 2 priemra fila-->
+					</div><!--cierra row 1 de 3 con dos cols-6-->
+					<div class="row pb-3 pt-3"><!--abre row 2 de 3 con dos cols-6-->
+						<div class="col-6 blanco text-center mr-5"><!--abre col-6 1 de 2 priemra fila-->
+							<div class="row"><!--row de imagen-->
+								<img class="mol" src="img/grid/3a.jpg">
+							</div>
+							<div class="row"><!--row de imagen-->
+								<h1 class="sbt1">To-Do Dashboard</h1>
+							</div>
+							<div class="row"><!--row de imagen-->
+								<p class="sbt1 text-gray"> Graphic / Logo</p>
+							</div>
+						</div><!--cierra col-6 2 de 2 priemra fila-->
+						<div class="col-6 blanco text-center mr-5"><!--abre col-6 1 de 2 priemra fila-->
+							<div class="row"><!--row de imagen-->
+								<img class="mol" src="img/grid/4a.jpg">
+							</div>
+							<div class="row"><!--row de imagen-->
+								<h1 class="sbt1">Events and More</h1>
+							</div>
+							<div class="row"><!--row de imagen-->
+								<p class="sbt1 text-gray"> Graphic / Logo</p>
+							</div>
+						</div><!--cierra col-6 2 de 2 priemra fila-->
+					</div><!--cierra row 2 de 3 con dos cols-6-->
+					<div class="row pb-5 pt-5"><!--abre row 3 de 3 con dos cols-6-->
+						<div class="col-6 blanco text-center mr-5"><!--abre col-6 1 de 2 priemra fila-->
+							<div class="row"><!--row de imagen-->
+								<img class="mol" src="img/grid/5a.jpg">
+							</div>
+							<div class="row"><!--row de imagen-->
+								<h1 class="sbt1">WhereTO App</h1>
+							</div>
+							<div class="row"><!--row de imagen-->
+								<p class="sbt1 text-gray"> Web Design / Identity</p>
+							</div>
+						</div><!--cierra col-6 2 de 2 priemra fila-->
+						<div class="col-6 blanco text-center mr-5"><!--abre col-6 1 de 2 priemra fila-->
+							<div class="row"><!--row de imagen-->
+								<img class="mol" src="img/grid/6a.jpg">
+							</div>
+							<div class="row"><!--row de imagen-->
+								<h1 class="sbt1">Ski * Buddy</h1>
+							</div>
+							<div class="row"><!--row de imagen-->
+								<p class="sbt1 text-gray"> Identity / Web Design</p>
+							</div>
+						</div><!--cierra col-6 2 de 2 priemra fila-->
+					</div><!--cierra row 3 de 3 con dos cols-6-->
+					<div class="row ">
+						<div class="col-12 text-center">
+							<a href=""><p id="load" class="sbt1 text-center">Load More</p></a>
+						</div>
+					</div>
+				</div><!-- termina fondo gris-->
+			</section> <!-- cierra imagen de laptop con fondo gris-->
+
 		</div>
 	</body>
 </html>
