section follow us

--- a/index.html
+++ b/index.html
@@ -243,7 +243,27 @@
 					</div>
 				</div><!-- termina fondo gris-->
 			</section> <!-- cierra imagen de laptop con fondo gris-->
-
+			<section  class="row pb-5 pt-5"><!--abre follow us-->
+				<div class="row text-center">
+					<div class="col-12">
+						<p class="titulos sbt1 text-gray">Follow Us!</p>
+					</div>
+				</div>
+				<div class="row text-center">
+					<div class="col-12">
+						<p class="sbt1 text-gray pt-3" id="follow">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur velit fugit possimus, eum provident!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur velit fugit possimus, eum provident!</p>
+					</div>
+				</div>
+				<div class="row text-center pt-5">
+					<div class="col-12">
+						<a href=""><img class="icor" src="img/icons/face.png"></a>
+						<a href=""><img class="icor" src="img/icons/twitter.png"></a>
+						<a href=""><img class="icor" src="img/icons/in.png"></a>
+						<a href=""><img class="icor" src="img/icons/pinterest.png"></a>
+						<a href=""><img class="icor" src="img/icons/gplus.png"></a>
+					</div>
+				</div>
+			</section><!--cierra follow us-->
 		</div>
 	</body>
 </html>
