--- a/index.html
+++ b/index.html
@@ -264,6 +264,11 @@
 					</div>
 				</div>
 			</section><!--cierra follow us-->
+			<footer>
+				<div class="row text-center" id="bg-gray2">
+					<p class="sbt1 text-white pt-3 pb-3">©primes 2015 - laboratoria.la</p>
+				</div>
+			</footer>
 		</div>
 	</body>
 </html>
