que dicen los clientes

--- a/index.html
+++ b/index.html
@@ -243,6 +243,16 @@
 					</div>
 				</div><!-- termina fondo gris-->
 			</section> <!-- cierra imagen de laptop con fondo gris-->
+			<section><!-- abre what our customers have to say-->
+				<div class="row text-center pb-5 pt-5">
+					<div class="col-12">
+						<p class="titulos sbt1 text-gray pb-3">What our customers have to say..</p>
+						<img id="cliente" src="img/customer.jpg" alt="cliente">
+						<p class="sbt1 text-gray pt-3 pl-20 pr-20">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate nemo quas sit pariatur. Enim quis culpa debitis, quas voluptate doloribus, ad iste. Beatae ipsa rem, nesciunt nam. Cum, molestias, delectus.</p><br>
+						<p class="sbt1 text-gray "><b>-Diana Rosswert</b></p>
+					</div>
+				</div>
+			</section><!-- cierra what our customers have to say-->	
 			<section  class="row pb-5 pt-5"><!--abre follow us-->
 				<div class="row text-center">
 					<div class="col-12">
