parte de contact us

--- a/index.html
+++ b/index.html
@@ -253,6 +253,50 @@
 					</div>
 				</div>
 			</section><!-- cierra what our customers have to say-->	
+			<section ><!--abre contact us-->
+				<div class="row bg-img-block pt-3 pb-3" id="bckf2"><!--abre row generla de contacto-->
+					<div class="row">
+						<div class="col-12 text-center">
+							<p class="titulos sbt1 text-white">Contact Us</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-12 text-center">
+							<p class="sbt1 text-white pt-3 pl-5 pr-5" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate nemo quas sit pariatur. Enim quis culpa debitis, quas voluptate doloribus, ad iste. Beatae ipsa rem, nesciunt nam.</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-6">
+							<p class="stitulos sbt1 text-white pt-3 mb-3 opacity">Send Message</p>	
+						</div>
+						<div class="col-6">
+							<p class="stitulos sbt1 text-white pt-3">About Us</p>	
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-6">
+							<form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
+								<div class="row left ">
+									<input class=" ins sbt1 pt-3 mb-3 text-gray" name="nombre" type="text" value="Nombre"/>
+								</div>
+								<div class="row left ">
+									<input class=" ins sbt1 pt-3 mb-3 text-gray" name="email" type="text" value="Email"/>
+								</div>
+								<div class="row left ">
+									<textarea  class=" ins sbt1 pt-3 mb-3 text-gray" name="mensaje" rows="8" cols="65">Mensaje</textarea>
+								</div>
+								<input type="submit" value="ENVIAR" id="load2" class="pt-3 sbt1 text-center text-white" />
+							</form>
+						</div>
+						<div class="col-6">
+							<p class="left sbt1 text-white pt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate nemo quas sit pariatur. Enim quis culpa debitis, quas voluptate doloribus, ad iste. Beatae ipsa rem, nesciunt nam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate nemo quas sit pariatur. Enim quis culpa debitis, quas voluptate doloribus, ad iste. Beatae ipsa rem, nesciunt nam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate nemo quas sit pariatur. Enim quis culpa debitis, quas voluptate doloribus, ad iste. Beatae ipsa rem, nesciunt nam.</p>
+							<p class="stitulos sbt1 text-white pt-3">Address</p>
+							<p class="left sbt1 text-white pt-3"><img class="iconsr" src="img/icons/ubicacion.png">13 Brant Strret, Burlington, Ontario, Canada</p><br>
+							<p class="left sbt1 text-white pt-3"><img class="iconsr" src="img/icons/telefono.png">Phone: 0011 222 335 7773</p>
+						</div>
+					</div>
+				</div><!--cierra row generla de contacto-->
+			</section><!--cierra contact us-->
 			<section  class="row pb-5 pt-5"><!--abre follow us-->
 				<div class="row text-center">
 					<div class="col-12">
