corrección de purchase

--- a/index.html
+++ b/index.html
@@ -243,6 +243,67 @@
 					</div>
 				</div><!-- termina fondo gris-->
 			</section> <!-- cierra imagen de laptop con fondo gris-->
+			<section>
+				<div class="row text-center left3 pt-3 ">
+					<div class="col-4 blanco2 text-center mr-2">
+						<div class="row">
+							<h1 class="titulos sbt1 text-gray pb-3" id="sta">Standard</h1>
+						</div>
+						<div class="row">
+							<p class="text-center sbt1 pb-3 text-gray bg-gray sif">Form $45.99 per month</p>
+							<ul>
+								<li class="pb-3">Vestibulum est magma</li>
+								<hr>
+								<li class="pb-3">Maurius auctor massa libero</li>
+								<hr>
+								<li class="pb-3">Present magma tortor</li>
+								<hr>
+								<li class="pb-3">Crash et fermentum massa</li>
+								<hr><br>
+								<button class="sbt1 text-center text-white" id="load3">Purchase</button>
+							</ul>
+						</div>	
+					</div>
+					<div class="col-4 blanco2 mr-2">
+						<div class="row">
+							<h1 class="titulos sbt1 text-gray pb-3" id="sta">Standard</h1>
+						</div>
+						<div class="row">
+							<p class="text-center sbt1 pb-3 text-gray bg-gray sif">Form $45.99 per month</p>
+							<ul>
+								<li class="pb-3">Vestibulum est magma</li>
+								<hr>
+								<li class="pb-3">Maurius auctor massa libero</li>
+								<hr>
+								<li class="pb-3">Present magma tortor</li>
+								<hr>
+								<li class="pb-3">Crash et fermentum massa</li>
+								<hr><br>
+								<button class="sbt1 text-center text-white" id="load3">Purchase</button>
+							</ul>
+						</div>	
+					</div>
+					<div class="col-4 blanco2 mr-2">
+						<div class="row">
+							<h1 class="titulos sbt1 text-gray pb-3" id="sta">Standard</h1>
+						</div>
+						<div class="row">
+							<p class="text-center sbt1 pb-3 text-gray bg-gray sif">Form $45.99 per month</p>
+							<ul>
+								<li class="pb-3">Vestibulum est magma</li>
+								<hr>
+								<li class="pb-3">Maurius auctor massa libero</li>
+								<hr>
+								<li class="pb-3">Present magma tortor</li>
+								<hr>
+								<li class="pb-3">Crash et fermentum massa</li>
+								<hr><br>
+								<button class="sbt1 text-center text-white" id="load3">Purchase</button>
+							</ul>
+						</div>	
+					</div>
+				</div>
+			</section>
 			<section><!-- abre what our customers have to say-->
 				<div class="row text-center pb-5 pt-5">
 					<div class="col-12">
